# depgraph

./: .dockerignore  .gitignore  Dockerfile  Gemfile  README.md  config.ru  k8s.yml  pyproject.toml  server.py  server.rb
.github/workflows/: docker-publish.yml
public/: index.html
public/css/: style.css
public/js/: app.js
views/: app.coffee  index.haml  style.scss
