[tool.poetry]
name = "depgraph_2020"
version = "0.1.0"
description = ""
authors = ["Zero Cho <itszero@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
bottle = "^0.12.18"
stanza = "^1.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
